# berry-coin

./: App.tsx  README.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
components/: BurnCounter.tsx  Footer.tsx  GoldDust.tsx  Hero.tsx  MetaMaskWatcher.tsx  Navbar.tsx  Tokenomics.tsx  UniversalWalletWatcher.tsx  WalletAutoReload.tsx  WalletSync.tsx  WantedPosterGenerator.tsx
docs/: deployment_guide.md  marketing_strategy.md
hooks/: useBerryBalance.ts
programs/berry_program/: Cargo.toml
programs/berry_program/src/: lib.rs
services/: MockWalletContext.tsx
